--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.0",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "prisma": "^5.21.0"
   }
 }
